Menu fixes on mobile

--- a/assets/mega-menu.css
+++ b/assets/mega-menu.css
@@ -117,11 +117,6 @@
   flex: 1 1 auto;
 }
 
-.touch[data-orientation='landscape'] .menu__list {
-  padding-left: 48px;
-  padding-right: 48px;
-}
-
 .menu__item {
   display: grid;
   grid-template-columns: 1fr min-content;
@@ -263,12 +258,11 @@
 }
 
 .touch[data-orientation='landscape'] .menu__bottom {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-bottom: 120px;
 }
 
 .touch[data-orientation='portrait'] .menu__bottom {
-  padding-bottom: 30px;
+  padding-bottom: 100px;
 }
 
 .menu__icons {
